--- a/htmlBase/htmlBase.html
+++ b/htmlBase/htmlBase.html
@@ -8,19 +8,21 @@
 </head>
 
 <body>
-    <div class = "header">
-         <h2>This is the structure of a basic HTML file:</h2>
+    <div class = "secretCenter">
+        <div class = "header">
+            <h2>This is the structure of a basic HTML file:</h2>
+       </div>
     </div>
     <div class = "sameWidth">
-        <img src = "htmlStructure.png" alt = "Basic HTML structure" style = "margin: 10px; margin-left: 100px; margin-right: 50px;">
+        <img src = "htmlStructure.png" alt = "Basic HTML structure" style = "margin: 10px;">
         <dl style = "margin-left: 10px;">
             <h3>The parts are:</h3>
-            <dt>DOCTYPE</dt>
-            <dd>type of the document</dd>
+            <dt>!DOCTYPE</dt>
+            <dd>HTML version of the document</dd>
             <dt>html</dt>
-            <dd>idk lmao</dd>
+            <dd>Anything outside of it does not count as HTML</dd>
             <dt>Head</dt>
-            <dd>Holds the information for the whole document</dd>
+            <dd>Info on how to work with the "body" tag</dd>
             <dt>Body</dt>
             <dd>Contains the page itself</dd>
         </dl>
@@ -38,7 +40,7 @@
                 <p>main</p>
             </div>
         </a>
-        <a href = "../colors/colors.html">
+        <a href = "../texts/texts.html">
             <div class = "myButton">
                 <p>next</p>
             </div>
