--- a/colors/colors.html
+++ b/colors/colors.html
@@ -7,7 +7,29 @@
     </head>
 
     <body>
-        <h1>Hi</h1>
-        <a href = "../htmlBase/htmlBase.html">Return</a>
+        <div class = "secretCenter">
+            <div class = "header">
+                <h2>&nbsp Hi &nbsp</h2>
+            </div>
+        </div>
+
+
+        <div class = "navBar">
+            <a href = "../texts/texts.html">
+                <div class = "myButton">
+                    <p>&nbsp prev &nbsp</p>
+                </div>
+            </a>
+            <a href = "../index/index.html">
+                <div class = "myButton">
+                    <p>&nbsp main &nbsp</p>
+                </div>
+            </a>
+            <a href = "../index/index.html">
+                <div class = "myButton">
+                    <p>&nbsp next &nbsp</p>
+                </div>
+            </a>
+        </div>
     </body>
 </html>
