--- a/htmlBase/htmlBase.html
+++ b/htmlBase/htmlBase.html
@@ -10,7 +10,7 @@
 <body>
     <div class = "secretCenter">
         <div class = "header">
-            <h2>This is the structure of a basic HTML file:</h2>
+            <h2>&nbsp This is the structure of a basic HTML file: &nbsp</h2>
        </div>
     </div>
     <div class = "sameWidth">
@@ -32,17 +32,17 @@
     <div class = "navBar">
         <a href = "../index/index.html">
             <div class = "myButton">
-                <p>prev</p>
+                <p>&nbsp prev &nbsp</p>
             </div>
         </a>
         <a href = "../index/index.html">
             <div class = "myButton">
-                <p>main</p>
+                <p>&nbsp main &nbsp</p>
             </div>
         </a>
         <a href = "../texts/texts.html">
             <div class = "myButton">
-                <p>next</p>
+                <p>&nbsp next &nbsp</p>
             </div>
         </a>
     </div>
