--- a/index/index.html
+++ b/index/index.html
@@ -9,7 +9,38 @@
 
 <body>
     <h1><em>Welcome to my HTML info dump!</em></h1>
-    <a href = "../htmlBase/htmlBase.html">Click here!</a>
+    <ol>
+        <li>
+            <a href = "../htmlBase/htmlBase.html">
+            <div class = "myButton">
+                    <h3>
+                        <em>&nbsp Template &nbsp</em>
+                    </h3>
+                </div>
+             </a>
+        </li>
+        <li>
+            <a href = "../texts/texts.html">
+                <div class = "myButton">
+                        <h3>
+                            <em>&nbsp Texts &nbsp</em>
+                        </h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href = "../colors/colors.html">
+                <div class = "myButton">
+                        <h3>
+                            <em>&nbsp Colors &nbsp</em>
+                        </h3>
+                </div>
+            </a>        
+        </li>
+    </ol>
+    
 </body>
+
+
 
 </html>
