changed .pageTop into grid, added ext. links

--- a/colors/colors.html
+++ b/colors/colors.html
@@ -7,6 +7,21 @@
     </head>
 
     <body>
+        <div class = "pageTop">
+            <img src = "../waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:inherit;">
+            <p style = "grid-column: 2; text-align: center;">Max's HTML dump</p>
+            <a href= mailto:"maxkrivenya@gmail.com">
+                <p style = "grid-column: 3; text-align: center;">
+                    Gmail
+                </p>
+            </a>
+            <a href = https://github.com/maxkrivenya>
+                <p style = "grid-column: 4; text-align: center;">
+                    GitHub
+                </p>
+            </a>
+        </div>
+
         <div class = "secretCenter">
             <div class = "header">
                 <h2>&nbsp Hi &nbsp</h2>
