--- a/index/index.html
+++ b/index/index.html
@@ -8,7 +8,30 @@
 </head>
 
 <body>
-    <h1><em>Welcome to my HTML info dump!</em></h1>
+    <div class = "pageTop">
+        <img src = "../waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:inherit;">
+        <p style = "grid-column: 2; text-align: center;">Max's HTML dump</p>
+        <a href= mailto:"maxkrivenya@gmail.com">
+            <p style = "grid-column: 3; text-align: center;">
+                Gmail
+            </p>
+        </a>
+        <a href = https://github.com/maxkrivenya>
+            <p style = "grid-column: 4; text-align: center;">
+                GitHub
+            </p>
+        </a>
+    </div>
+        <h1 style = "margin-top: 40px;"><em>Welcome to my HTML info dump!</em></h1>
+    <div class = "sameWidth">
+    <div style = "width:400px; height: fit-content">
+    <h3>HTML (or HyperText Markup Language) 
+        is the language for creating web-pages.
+        Without CSS (Cascading Style Sheets) or any other design-improving language
+        the pages <em>will</em> look incredibly boring. Luckily,
+        designing web-pages isn't too hard or boring.
+    </h3>
+    </div>
     <ol>
         <li>
             <a href = "../htmlBase/htmlBase.html">
@@ -38,7 +61,7 @@
             </a>        
         </li>
     </ol>
-    
+    </div>
 </body>
 
 
