--- a/texts/texts.html
+++ b/texts/texts.html
@@ -8,28 +8,20 @@
 </head>
 
 <body>
-   <div class = "pageTop">
-    <div class = "sameWidth">
-    <table style = "display:flex; flex-direction: row; justify-content: left;">
-        <thead>
-            <th>
-                <img src = "../waltuh.jpg" alt = "logo" height = 60px>
-            </th>
-        </thead>
-    </table>
-        <a href = "../index/index.html" style = "position:fixed; color:antiquewhite; height: 60px; display:flex; justify-content: center; align-items: center;">Max's HTML Course</a>
-    <table style = "display:flex; flex-direction: row; justify-content: right;">
-        <thead>
-            <th>
-                cheese
-            </th>
-            <th>
-                borgerz
-            </th>
-        </thead>
-    </table>
-</div>
-   </div>
+    <div class = "pageTop">
+        <img src = "../waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:inherit;">
+        <p style = "grid-column: 2; text-align: center;">Max's HTML dump</p>
+        <a href= mailto:"maxkrivenya@gmail.com">
+            <p style = "grid-column: 3; text-align: center;">
+                Gmail
+            </p>
+        </a>
+        <a href = https://github.com/maxkrivenya>
+            <p style = "grid-column: 4; text-align: center;">
+                GitHub
+            </p>
+        </a>
+    </div>
    <div class = "secretCenter">
     <div class = "header">
         <h2>&nbsp Text modes &nbsp</h2>
