--- a/colors/colors.html
+++ b/colors/colors.html
@@ -2,7 +2,7 @@
 <html lang = "en">
     <head>
         <meta charset = "utc-8">
-        <title>Hi</title>
+        <title>Colours</title>
         <link rel = "stylesheet" href = "../style.css">
     </head>
 
@@ -22,11 +22,41 @@
             </a>
         </div>
 
-        <div class = "secretCenter">
+        <div class = "secretCenter"  style = "margin-bottom:35px;">
             <div class = "header">
                 <h2>&nbsp Hi &nbsp</h2>
             </div>
         </div>
+
+        <div class = "sameWidth" style = "margin-bottom:50px">
+        <p style = "margin-left: 50px; text-align: left;">
+            If you've already tried using HTML (and maybe CSS)
+            then you know that default web-pages look quite boring.
+            That's when you can let your inner artist do the job at decorating it!
+        </p>
+        <img src = "barehtml.png" alt = "bare html website" 
+        style = "display: flex; align-self:center; 
+        width:25vw; margin-left:50px; margin-right:50px">
+        </div>
+        <div class = "sameWidth">
+            <img src = "colors .png" alt = "colors in css" 
+            style = "display: flex; align-self:center; width:40vw;
+            margin-left:50px; margin-right:50px">
+        
+            <p style = "margin-right: 50px; text-align: left;">
+            In CSS colors are "style" parameters, just like width, height, etc.
+            There also are different tags for adding color to different objects: "color:" for text,
+            "background-color:", "border-color", "something-else-color".
+            (P.S. : for adding background-color directly in "body" declaration tag, use bgcolor)
+        </p>
+        </div>
+        <p>
+            But how do you actually tell the browser which color you wanna add?
+            The most common ways are via hexadecimal form (#AABBCC) or RGB (AAA, BBB, CCC).
+            But using numbers to approximate the color you want would be tiring, so there are
+            preset options, like "red" or "antiquewhite". Or you could just tap the colour you wanna use
+            on the graph.
+        </p>
 
 
         <div class = "navBar">
