finished up colors

--- a/colors/colors.html
+++ b/colors/colors.html
@@ -50,14 +50,18 @@
             (P.S. : for adding background-color directly in "body" declaration tag, use bgcolor)
         </p>
         </div>
+        <div class = "sameWidth">
         <p>
             But how do you actually tell the browser which color you wanna add?
-            The most common ways are via hexadecimal form (#AABBCC) or RGB (AAA, BBB, CCC).
+            The most common ways are via hexadecimal form (#AABBCC) or RGB (A, B, C).
             But using numbers to approximate the color you want would be tiring, so there are
             preset options, like "red" or "antiquewhite". Or you could just tap the colour you wanna use
             on the graph.
         </p>
-
+        <img src = "hex.png" alt = "hex color" 
+        style = "display: flex; align-self:center; width:40vw;
+        margin-left:50px; margin-right:50px">
+        </div>
 
         <div class = "navBar">
             <a href = "../texts/texts.html">
