fixed index location

--- a/colors/colors.html
+++ b/colors/colors.html
@@ -69,12 +69,12 @@
                     <p>&nbsp prev &nbsp</p>
                 </div>
             </a>
-            <a href = "../index/index.html">
+            <a href = "../index.html">
                 <div class = "myButton">
                     <p>&nbsp main &nbsp</p>
                 </div>
             </a>
-            <a href = "../index/index.html">
+            <a href = "../index.html">
                 <div class = "myButton">
                     <p>&nbsp next &nbsp</p>
                 </div>
