--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset = "utf-8">
     <title>HTML & CSS info dump</title>
-    <link rel = "stylesheet" href = "../style.css">
+    <link rel = "stylesheet" href = "style.css">
 </head>
 
 <body>
     <div class = "pageTop">
-        <img src = "../waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:inherit;">
+        <img src = "waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:inherit;">
         <p style = "grid-column: 2; text-align: center;">Max's HTML dump</p>
         <a href= mailto:"maxkrivenya@gmail.com">
             <p style = "grid-column: 3; text-align: center;">
@@ -34,7 +34,7 @@
     </div>
     <ol>
         <li>
-            <a href = "../htmlBase/htmlBase.html">
+            <a href = "htmlBase/htmlBase.html">
             <div class = "myButton">
                     <h3>
                         <em>&nbsp Template &nbsp</em>
@@ -43,7 +43,7 @@
              </a>
         </li>
         <li>
-            <a href = "../texts/texts.html">
+            <a href = "texts/texts.html">
                 <div class = "myButton">
                         <h3>
                             <em>&nbsp Texts &nbsp</em>
@@ -52,7 +52,7 @@
             </a>
         </li>
         <li>
-            <a href = "../colors/colors.html">
+            <a href = "colors/colors.html">
                 <div class = "myButton">
                         <h3>
                             <em>&nbsp Colors &nbsp</em>
