--- a/texts/texts.html
+++ b/texts/texts.html
@@ -142,7 +142,7 @@
                 <p>&nbsp prev &nbsp</p>
             </div>
         </a>
-        <a href = "../index/index.html">
+        <a href = "../index.html">
             <div class = "myButton">
                 <p>&nbsp main &nbsp</p>
             </div>
