--- a/htmlBase/htmlBase.html
+++ b/htmlBase/htmlBase.html
@@ -44,12 +44,12 @@
     </div>
 
     <div class = "navBar">
-        <a href = "../index/index.html">
+        <a href = "../index.html">
             <div class = "myButton">
                 <p>&nbsp prev &nbsp</p>
             </div>
         </a>
-        <a href = "../index/index.html">
+        <a href = "../index.html">
             <div class = "myButton">
                 <p>&nbsp main &nbsp</p>
             </div>
