u in coloUrs.html

--- a/colors/colors.html
+++ b/colors/colors.html
@@ -24,7 +24,7 @@
 
         <div class = "secretCenter"  style = "margin-bottom:35px;">
             <div class = "header">
-                <h2>&nbsp Colors &nbsp</h2>
+                <h2>&nbsp Colours &nbsp</h2>
             </div>
         </div>
 
