divs, anchors, new font (link + downloaded zip)

--- a/colors/colors.html
+++ b/colors/colors.html
@@ -22,7 +22,7 @@
             </a>
         </div>
 
-        <div class = "secretCenter"  style = "margin-bottom:35px;">
+        <div class = "secretCenter">
             <div class = "header">
                 <h2>&nbsp Colors &nbsp</h2>
             </div>
@@ -74,7 +74,7 @@
                     <p>&nbsp main &nbsp</p>
                 </div>
             </a>
-            <a href = "../index.html">
+            <a href = "../div/div.html">
                 <div class = "myButton">
                     <p>&nbsp next &nbsp</p>
                 </div>
