--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
         <h1 style = "margin-top: 40px;"><em>Welcome to my HTML info dump!</em></h1>
     <div class = "sameWidth">
-    <div style = "width:400px; height: fit-content">
+    <div style = "width:400px; height: auto">
     <h3>HTML (or HyperText Markup Language) 
         is the language for creating web-pages.
         Without CSS (Cascading Style Sheets) or any other design-improving language
@@ -37,7 +37,7 @@
             <a href = "htmlBase/htmlBase.html">
             <div class = "myButton">
                     <h3>
-                        <em>&nbsp Template &nbsp</em>
+                        <em>Template</em>
                     </h3>
                 </div>
              </a>
@@ -56,6 +56,15 @@
                 <div class = "myButton">
                         <h3>
                             <em>&nbsp Colors &nbsp</em>
+                        </h3>
+                </div>
+            </a>        
+        </li>
+        <li>
+            <a href = "div/div.html">
+                <div class = "myButton">
+                        <h3>
+                            <em>&nbsp Divs &nbsp</em>
                         </h3>
                 </div>
             </a>        
