--- a/texts/texts.html
+++ b/texts/texts.html
@@ -135,7 +135,12 @@
         </tr>
     </table>
    
-
+    <p>Another use for text in HTML are <em>links</em>.
+    They are created using the anchor tag ("a"), with a parameter href in the parenthesis<br> (a href = "www.link.link">).
+    If you need to link your own HTML page, you just need to navigate to the link 
+    using '/'. If you need an external link, just copy its adress from the web.
+    The anchor tag can not only be used on text, but any type of HTML content, as long as the "a" tag is on top.
+    </p>
     <div class = "navBar">
         <a href = "../htmlBase/htmlBase.html">
             <div class = "myButton">
