added a couple effects, link to index on top

--- a/colors/colors.html
+++ b/colors/colors.html
@@ -9,8 +9,11 @@
     <body>
         <div class = "pageTop">
             <img src = "../waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:inherit;">
-            <p style = "grid-column: 2; text-align: center;">Max's HTML dump</p>
-            <a href= mailto:"maxkrivenya@gmail.com">
+            <a href = "../index.html">
+                <p style = "grid-column: 2; text-align: center;">
+                    Max's HTML dump
+                </p>
+            </a>                  <a href= mailto:"maxkrivenya@gmail.com">
                 <p style = "grid-column: 3; text-align: center;">
                     Gmail
                 </p>
