--- a/texts/texts.html
+++ b/texts/texts.html
@@ -9,12 +9,53 @@
 
 <body>
     <div class = "pageTop">
-        <img src = "../waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:inherit;">
-        <a href = "../index.html">
+        <div class = "dropdownMenu">
+            <ul>
+                <li>
+            <img src = "../waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:60px;">
+            <ul>
+                <li>
+                    <a href = "../index.html">
+                        <div class = "myButton">
+                            Main page
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href = "../htmlBase/htmlBase.html">                        <div class = "myButton">
+                       Basics
+                    </div></a>
+                </li>
+                <li>
+                    <a href = "../texts/texts.html"> 
+                        <div class = "myButton">
+                        Text
+                    </div></a>
+                </li>
+                <li>
+                    <a href = "../colors/colors.html">  
+                    <div class = "myButton">
+                        Colors
+                    </div>
+                </a>
+                </li>
+                <li>
+                    <a href = "../div/div.html">  
+                        <div class = "myButton">
+                            Divs
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        </ul>
+        </div>
+        <a href = "index.html">
             <p style = "grid-column: 2; text-align: center;">
                 Max's HTML dump
             </p>
-        </a>              <a href= mailto:"maxkrivenya@gmail.com">
+        </a>
+        <a href= mailto:"maxkrivenya@gmail.com">
             <p style = "grid-column: 3; text-align: center;">
                 Gmail
             </p>
