fixed main sign bug

--- a/colors/colors.html
+++ b/colors/colors.html
@@ -49,7 +49,7 @@
             </li>
             </ul>
             </div>
-            <a href = "index.html">
+            <a href = "../index.html">
                 <p style = "grid-column: 2; text-align: center;">
                     Max's HTML dump
                 </p>
