--- a/div/div.html
+++ b/div/div.html
@@ -51,7 +51,7 @@
         </li>
         </ul>
         </div>
-        <a href = "index.html">
+        <a href = "../index.html">
             <p style = "grid-column: 2; text-align: center;">
                 Max's HTML dump
             </p>
