navBar to index

--- a/index.html
+++ b/index.html
@@ -115,6 +115,23 @@
         </li>
     </ol>
     </div>
+    <div class = "navBar">
+        <a href = "div/div.html">
+            <div class = "myButton">
+                <p>&nbsp prev &nbsp</p>
+            </div>
+        </a>
+        <a href = "index.html">
+            <div class = "myButton">
+                <p>&nbsp main &nbsp</p>
+            </div>
+        </a>
+        <a href = "htmlBase/htmlBase.html">
+            <div class = "myButton">
+                <p>&nbsp next &nbsp</p>
+            </div>
+        </a>
+    </div>
 </body>
 
 
