first version div:display

--- a/div/div.html
+++ b/div/div.html
@@ -149,7 +149,7 @@
                 <p>&nbsp main &nbsp</p>
             </div>
         </a>
-        <a href = "../index.html">
+        <a href = "../div-display/display.html">
             <div class = "myButton">
                 <p>&nbsp next &nbsp</p>
             </div>
