--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
                         </div>
                     </a>
                 </li>
+                <li>
+                    <a href = "div-display/display.html">  
+                        <div class = "myButton">
+                            Display
+                        </div>
+                    </a>
+                </li>
             </ul>
         </li>
         </ul>
@@ -76,7 +83,7 @@
         designing web-pages isn't too hard or boring.
     </h3>
     </div>
-    <ol>
+    <ol id = "indexList">
         <li>
             <a href = "htmlBase/htmlBase.html">
             <div class = "myButton">
@@ -113,10 +120,23 @@
                 </div>
             </a>        
         </li>
+        <li>
+            <ul>
+                <li>
+                    <a href = "div-display/display.html">
+                        <div class = "myButton">
+                            <h3>
+                                <em>&nbsp Display &nbsp</em>
+                            </h3>
+                    </div>
+                    </a>
+                </li>
+            </ul>        
+        </li>
     </ol>
     </div>
     <div class = "navBar">
-        <a href = "div/div.html">
+        <a href = "div-display/display.html">
             <div class = "myButton">
                 <p>&nbsp prev &nbsp</p>
             </div>
