new colors; button active animation

--- a/div-display/display.html
+++ b/div-display/display.html
@@ -30,7 +30,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href = "../htmlBase/htmlBase.html">                        <div class = "myButton">
+                        <a href = "../htmlBase/htmlBase.html">                       
+                         <div class = "myButton">
                            Basics
                         </div></a>
                     </li>
