added dropdownMenu to both index and sidePages

--- a/colors/colors.html
+++ b/colors/colors.html
@@ -13,41 +13,7 @@
                 <ul>
                     <li>
                 <img src = "../waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:60px;">
-                <ul>
-                    <li>
-                        <a href = "../index.html">
-                            <div class = "myButton">
-                                Main page
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href = "../htmlBase/htmlBase.html">                        <div class = "myButton">
-                           Basics
-                        </div></a>
-                    </li>
-                    <li>
-                        <a href = "../texts/texts.html"> 
-                            <div class = "myButton">
-                            Text
-                        </div></a>
-                    </li>
-                    <li>
-                        <a href = "../colors/colors.html">  
-                        <div class = "myButton">
-                            Colors
-                        </div>
-                    </a>
-                    </li>
-                    <li>
-                        <a href = "../div/div.html">  
-                            <div class = "myButton">
-                                Divs
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-            </li>
+                <ul id = "dropdownMenuUL">
             </ul>
             </div>
             <a href = "../index.html">
