--- a/htmlBase/htmlBase.html
+++ b/htmlBase/htmlBase.html
@@ -14,39 +14,7 @@
             <ul>
                 <li>
             <img src = "../waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:60px;">
-            <ul>
-                <li>
-                    <a href = "../index.html">
-                        <div class = "myButton">
-                            Main page
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href = "../htmlBase/htmlBase.html">                        <div class = "myButton">
-                       Basics
-                    </div></a>
-                </li>
-                <li>
-                    <a href = "../texts/texts.html"> 
-                        <div class = "myButton">
-                        Text
-                    </div></a>
-                </li>
-                <li>
-                    <a href = "../colors/colors.html">  
-                    <div class = "myButton">
-                        Colors
-                    </div>
-                </a>
-                </li>
-                <li>
-                    <a href = "../div/div.html">  
-                        <div class = "myButton">
-                            Divs
-                        </div>
-                    </a>
-                </li>
+            <ul id = "dropdownMenuUL">
             </ul>
         </li>
         </ul>
@@ -89,7 +57,7 @@
     </div>
 
     <div class = "navBar" id = "navBar">
-        <script src = "../sidePages.js">navBarSidePages("Template");</script>
+        <script src = "../sidePages.js"></script>
     </div>
 </body>
 
