--- a/index.html
+++ b/index.html
@@ -14,46 +14,7 @@
             <ul>
                 <li>
             <img src = "waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:60px;">
-            <ul>
-                <li>
-                    <a href = "index.html">
-                        <div class = "myButton">
-                            Main page
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href = "htmlBase/htmlBase.html">                        <div class = "myButton">
-                       Basics
-                    </div></a>
-                </li>
-                <li>
-                    <a href = "texts/texts.html"> 
-                        <div class = "myButton">
-                        Text
-                    </div></a>
-                </li>
-                <li>
-                    <a href = "colors/colors.html">  
-                    <div class = "myButton">
-                        Colors
-                    </div>
-                </a>
-                </li>
-                <li>
-                    <a href = "div/div.html">  
-                        <div class = "myButton">
-                            Divs
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href = "div-display/display.html">  
-                        <div class = "myButton">
-                            Display
-                        </div>
-                    </a>
-                </li>
+            <ul id = "dropdownMenuUL">
             </ul>
         </li>
         </ul>
@@ -85,7 +46,7 @@
     </h3>
     </div>
     <ol id = "indexList">
-        <script src="index.js">indexUL();</script>
+        <script src="index.js">;</script>
     </ol>
     </div>
     <div class = "navBar">
