added pageTop() to both index and sidePages

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 
 <body>
-    <div class = "pageTop">
-        <div class = "dropdownMenu">
+    <div class = "pageTop" id = "pageTop">
+        <!-- <div class = "dropdownMenu" id = "dropdownMenu">
             <ul>
                 <li>
-            <img src = "waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:60px;">
-            <ul id = "dropdownMenuUL">
+                    <img src = "waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:60px;">
+
+                    <ul id = "dropdownMenuUL">
+                    </ul>
+                </li>
             </ul>
-        </li>
-        </ul>
         </div>
         <a href = "index.html">
             <p style = "grid-column: 2; text-align: center;">
@@ -33,7 +34,7 @@
             <p style = "grid-column: 4; text-align: center;">
                 GitHub
             </p>
-        </a>
+        </a> -->
     </div>
         <h1 style = "margin-top: 40px;"><em>Welcome to my HTML info dump!</em></h1>
     <div class = "sameWidth">
@@ -46,7 +47,7 @@
     </h3>
     </div>
     <ol id = "indexList">
-        <script src="index.js">;</script>
+
     </ol>
     </div>
     <div class = "navBar">
@@ -66,4 +67,6 @@
             </div>
         </a>
     </div>
+    <script src="index.js">;</script>
+</body>
 </html>
