--- a/texts/texts.html
+++ b/texts/texts.html
@@ -9,29 +9,7 @@
 </head>
 
 <body>
-        <div class = "pageTop">
-        <div class = "dropdownMenu">
-            <ul>
-                <li>
-            <img src = "../waltuh.jpg" style = "grid-column: 1; justify-self: left; margin:0px; height:60px;">
-            <ul id = "dropdownMenuUL">
-            </ul>
-        </div>
-        <a href = "../index.html">
-            <p style = "grid-column: 2; text-align: center;">
-                Max's HTML dump
-            </p>
-        </a>
-        <a href= mailto:"maxkrivenya@gmail.com">
-            <p style = "grid-column: 3; text-align: center;">
-                Gmail
-            </p>
-        </a>
-        <a href = https://github.com/maxkrivenya>
-            <p style = "grid-column: 4; text-align: center;">
-                GitHub
-            </p>
-        </a>
+        <div class = "pageTop" id = "pageTop">
     </div>
    <div class = "secretCenter">
     <div class = "header">
